# deja

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.proxy  INTEGRATION_GUIDE.md  PRD.md  README.md  deja-project-spec.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: control.rs  correlation_key.rs  lib.rs  mode.rs  protocol.rs  runtime.rs  scope.rs  sequence.rs  storage.rs
connector-service/: Cargo.toml
connector-service/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: config.rs  control_api.rs  diff.rs  hash.rs  lib.rs  protocols.rs  recording.rs  replay.rs  runtime.rs  tls_mitm.rs
core/src/control_api/: client.rs  mod.rs  protocol.rs
core/src/protocols/: filter.rs  grpc.rs  http.rs  postgres.rs  redis.rs  tcp.rs
core/src/protocols/grpc/: framing.rs  serializer.rs
core/src/replay/: engine.rs  recording_index.rs
core/src/runtime/: mod.rs  pool_interceptor.rs  socket_interceptor.rs  spawn.rs  trace_context.rs
core/src/storage/: local_file.rs  mod.rs  noop.rs
core/tests/: diff_logic.rs  parser_recorder_flow.rs  postgres_flow.rs  redis_flow.rs  replay_flow.rs  replay_protocol_scope.rs  replay_test.rs  storage_contract.rs
proto/deja/v1/: events.proto
proxy/: Cargo.toml
proxy/src/: buffer.rs  config.rs  connection.rs  control_api.rs  correlation.rs  forward_proxy.rs  lib.rs  main.rs
proxy/tests/: mod.rs
proxy/tests/performance/: common.rs  mod.rs  regression.rs  test_suite.rs
scripts/: group_events_by_trace.py  live_concurrent_dashboard.py  run_deja_proxy.sh  run_deja_replay.sh  run_hyperswitch_with_deja.sh  run_unified_test_server.sh
sdk/: Cargo.toml
sdk/src/: association.rs  axum.rs  lib.rs  pool.rs  reqwest.rs  runtime.rs  sync_runtime.rs  tonic.rs
test-server/: Cargo.toml  build.rs
test-server/proto/: test_service.proto
test-server/src/: connector_service.rs  db_pools.rs  http_client.rs  http_handlers.rs  jsonl_exporter.rs  lib.rs  main.rs  mock_backend.rs  service.rs
test-server/tests/: basic_record_replay.rs  concurrent_validation.rs  connection_reuse.rs  cross_protocol_correlation.rs  error_scenarios.rs  full_e2e.rs  harness_utils.rs  nondeterministic.rs  proxy_integration.rs  recording_correlation.rs  sequence_mismatch.rs
test-server/tests/integration/: harness.rs  mocks.rs  mod.rs
test-service/: Cargo.toml  build.rs  test_output.txt
test-service/proto/: connector.proto
test-service/src/: main.rs
test-service/tests/: e2e.rs
tests/: concurrent_test.sh  connector_integration_test.sh  error_test.sh  integration_test.sh  test_service_integration.sh
