[workspace]
members = [
    "common",
    "core",
    "cli",
    # "proto" # we will access proto as a library or build script inside core
    # "agent",
    "proxy",
    "sdk",
    "test-server",
    "test-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Deja Team <hello@deja.dev>"]
license = "MIT"
repository = "https://github.com/deja-dev/deja"
