[package]
name = "connector-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Deja core
deja-core = { path = "../core" }

# Web framework
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.4", features = ["v4"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp"] }
