[package]
name = "deja-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
httparse = "1.8"
async-trait = "0.1"
bincode = "1.3"
rand = "0.8"

# Protobuf support
prost = "0.12"
prost-types = "0.12"

# TLS support
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2.1"
tokio-rustls = "0.26"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
