[package]
name = "deja-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
httparse = "1.8"
async-trait = "0.1"
bincode = "1.3"
rand = "0.8"
hex = "0.4"

# Shared types
deja-common = { path = "../common" }

# Protobuf support
prost = "0.12"
prost-types = "0.12"

# TLS support
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13", default-features = true, features = ["x509-parser"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
webpki-roots = "0.26"
x509-parser = "0.16"
time = "0.3"

# HTTP client for NetworkRuntime
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# gRPC/HTTP2 support
h2 = "0.4"
hpack = "0.3"

# Configuration parsing
toml = "0.8"

# Pattern matching for filters
glob = "0.3"
redis-protocol = { version = "6.0.0", features = ["bytes"] }
postgres-protocol = "0.6.10"
fallible-iterator = "0.2"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
