[package]
name = "deja-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
hyper = { version = "1.4", features = ["full", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
url = "2.5"
httparse = "1.8"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[dependencies.deja-core]
path = "../core"

[dependencies.deja-common]
path = "../common"
