[package]
name = "deja-sdk"
version = "0.1.0"
edition = "2021"
description = "Lightweight SDK for Deja record/replay integration"
license = "MIT"

# Keep dependencies minimal for fast compilation
[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.8"
tracing = "0.1"
