[package]
name = "deja-sdk"
version = "0.1.0"
edition = "2021"
description = "Lightweight SDK for Deja record/replay integration"
license = "MIT"

# Keep dependencies minimal for fast compilation
# Features for auto-instrumentation
[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:http", "dep:pin-project-lite"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.8"
tracing = "0.1"
futures = "0.3"
deja-core = { path = "../core" }
deja-common = { path = "../common" }

# Optional dependencies for auto-instrumentation features
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
