[package]
name = "deja-sdk"
version = "0.1.0"
edition = "2021"
description = "Lightweight SDK for Deja record/replay integration"
license = "MIT"

# Keep dependencies minimal for fast compilation
# Features for auto-instrumentation
[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:http", "dep:pin-project-lite"]
tonic = ["dep:tower", "dep:http", "dep:futures"]
sqlx = ["dep:sqlx"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
deja-core = { path = "../core" }
deja-common = { path = "../common" }
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"], optional = true }

# Optional dependencies for auto-instrumentation features
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }
