[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"
path = "src/main.rs"

[dependencies]
# gRPC (tonic) for incoming requests
tonic = "0.13"
prost = "0.13"

# Async runtime
tokio = { version = "1.32", features = ["full", "rt-multi-thread"] }

# HTTP client for outgoing requests
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Deja SDK for non-deterministic operations
deja-sdk = { path = "../sdk" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
thiserror = "1.0"
rand = "0.8"

# For embedded mock backend
axum = "0.7"
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3.8"
